<resources>
    <string name="app_name">Number Tool</string>
    <string name="hint">请输入手机号码</string>
    <string name="search">立 即 查 询</string>
    <string name="head_title">号码归属地查询</string>
    <string name="detail_title">号码信息</string>
    <string name="item_province">省份 ：%1$s</string>
    <string name="item_city">城市 ：%1$s</string>
    <string name="item_areacode">区号 ：%1$s</string>
    <string name="item_zip">邮政编码 ：%1$s</string>
    <string name="item_company">运营商 ：%1$s</string>
    <string name="item_type">卡类型 ：%1$s</string>
    <string name="detail_loading">正在获取</string>
    <string name="text4test">shishishis</string>
    <string name="history">查询历史</string>
    <string name="back2main">主界面</string>
    <string name="app_name_cn">号码信息助手</string>
    <string name="version_code">v1.1</string>
    <string name="image_text">图标丢失</string>
    <string name="github_address">https://github.com/Mindjet</string>
    <string name="email_address">pearl920@outlook.com</string>

</resources>
