<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/light_grey_bg"
              android:orientation="vertical">


    <TextView
        android:id="@+id/tv_me_back2main"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@mipmap/versioninfo_icon_back"
        android:drawablePadding="@dimen/ellipse_padding_small"
        android:drawableStart="@mipmap/versioninfo_icon_back"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/ellipse_padding_small"
        android:paddingRight="@dimen/ellipse_padding_small"
        android:text="@string/back2main"
        android:textColor="@color/white"
        android:textSize="@dimen/large_textSize"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ellipse_padding_small"
        android:id="@+id/tv_me_github"
        android:background="@color/white"
        android:drawableLeft="@mipmap/me_icon_github"
        android:drawablePadding="@dimen/ellipse_padding_small"
        android:drawableStart="@mipmap/me_icon_github"
        android:gravity="center_vertical"
        android:padding="@dimen/ellipse_padding_small"
        android:text="@string/github_address"
        android:textColor="@color/gray"
        android:textSize="@dimen/normal_textSize"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ellipse_padding_small"
        android:background="@color/white"
        android:drawableLeft="@mipmap/me_icon_email"
        android:drawablePadding="@dimen/ellipse_padding_small"
        android:drawableStart="@mipmap/me_icon_email"
        android:gravity="center_vertical"
        android:padding="@dimen/ellipse_padding_small"
        android:text="@string/email_address"
        android:textColor="@color/gray"
        android:textSize="@dimen/normal_textSize"/>


</LinearLayout>